--- a/options.html
+++ b/options.html
@@ -11,6 +11,7 @@
   <form id="options">
       Bitbucket API url : <input id="bitbucket-api-url" type="text" size="56"/> <br/>
       Max number of pull requests supported in overview page : <input id="max-pull-requests-count" type="number" size="5"/> (Make sure to not exceed the valid value - e.g. 100 is too much) <br/>
+      Reviewer display name to highlight: <input id="bitbucket-name" type="text" size="56"/> <br/>
       <br />
       <input type="submit" name="submit" value="Save settings"/>
   </form>
